Update errors in doc close #9
