# docs/swagger.yaml
@@ -82,6 +82,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/models.DefaultError'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/models.DefaultError'
         "500":
           description: Internal Server Error
           schema:
